# ecommerce

./: db.sqlite3  pyproject.toml
checkout/: admin.py  models.py  urls.py  views.py
checkout/migrations/: 0001_initial.py  0002_alter_checkout_id.py  0003_delete_checkout.py  0004_checkout.py  0005_auto_20210616_1042.py  0006_auto_20210617_0814.py  0007_auto_20210617_1028.py
contact/: models.py  views.py
contact/migrations/: 0001_initial.py  0002_alter_contact_message.py
ecommerce/: settings.py  urls.py
home/: models.py  views.py
home/migrations/: 0001_initial.py  0002_auto_20210614_1347.py  0003_product_awesome.py
product/: models.py  views.py
product/migrations/: 0001_initial.py  0002_delete_product.py  0003_product.py  0004_remove_product_productname.py  0005_delete_product.py
scorilo/: apps.py  urls.py  views.py
shop/: models.py  urls.py  views.py
shop/migrations/: 0001_initial.py  0002_auto_20210613_2201.py  0003_alter_shop_s_description.py  0004_delete_shop.py
templates/: base.html  checkout.html  contact.html  index.html  product.html  shop.html
