[tool.poetry]
name = "pyyyy"
version = "0.1.0"
description = ""
authors = ["bidhy123 <57656893+bidhy123@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
black = "^21.5b2"
Django = "^3.2.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
